--- a/src/index.html
+++ b/src/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+  
   <title>Restaurant page</title>
 </head>
 <body>
   <header>
     <nav>
-      <button>Home</button>
-      <button>Menu</button>
-      <button>About</button>
+      <button id="home">Home</button>
+      <button id="menu">Menu</button>
+      <button id="about">About</button>
     </nav>
   </header>
   <div id="content">
-
   </div>
 </body>
 </html>
