added page title

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <h1 id="name">Gronk-lebruk</h1>
     <nav>
       <button id="home">Home</button>
       <button id="menu">Menu</button>
